--- a/styles.css
+++ b/styles.css
@@ -2,20 +2,12 @@ body {
   background-image: url(images/bg-pattern-top-desktop.svg);
   background-repeat: no-repeat;
   background-position: top-left;
-}
-
-main {
-  display: block;
-}
-
-.superior {
-  display: flex;
+  font-family: "League Spartan", sans-serif;
 }
 
 article {
   margin: 40px;
   color: #506;
-  font-family: "League Spartan", sans-serif;
   font-size: 15px;
   margin-right: 30px;
 }
@@ -26,15 +18,10 @@ h1 {
 }
 
 .clasificacion {
-  background-color: #ddd;
+  background-color: #fee;
   margin-top: 20px;
   padding: 10px;
-  margin-left: 0px;
   border-radius: 5px;
-}
-
-.contenedor-de-tarjetas {
-  display: flex;
 }
 
 .tarjeta {
@@ -43,8 +30,6 @@ h1 {
   border-radius: 5px;
   padding: 20px;
   margin-bottom: 20px;
-  font-family: "League Spartan", sans-serif;
-  display: flex;
 }
 
 .foto {
@@ -52,4 +37,57 @@ h1 {
   border-radius: 100%;
   width: 50px;
   height: 50px;
+}
+
+@media (min-width: 500px) {
+  .container {
+    max-width: 1110px;
+    margin: 0 auto;
+  }
+
+  .superior {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: left;
+  }
+
+  .info {
+    flex: 1 1 0;
+  }
+
+  .contenedor-de-clasificacion {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 0;
+  }
+
+  .clasificacion-1 {
+    align-self: flex-start;
+  }
+  .clasificacion-2 {
+    align-self: center;
+  }
+  .clasificacion-3 {
+    align-self: flex-end;
+  }
+
+  .contenedor-de-tarjetas {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 300px;
+  }
+
+  .tarjeta {
+    margin: 10px;
+    flex-grow: 0.8;
+  }
+
+  .tarjeta-2 {
+    margin-top: 40px;
+  }
+  .tarjeta-3 {
+    margin-top: 60px;
+  }
 }
